<resources>
    <string name="app_name">HomeOrganizerMobile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="empty_field_error">Field cannot be empty!</string>
    <string name="invalid_username">Username must be >5 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passwords_error">Passwords must be the same!</string>
    <string name="uniqennes_error">Username or/and email are already taken!</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_register">Sign up!</string>
    <string name="title_activity_join_household">JoinHousehold</string>
    <string name="create_household_tab_text">Create household</string>
    <string name="join_household_tab_text">Join household</string>
    <string name="server_ip">http://192.168.0.248:8080/</string>
    <string name="household_join_error">Household with given Id doesn\'t exist.</string>
    <string name="title_activity_checklists">Checklists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_user_application">UserApplication</string>
    <string name="title_notes">Notes</string>
    <string name="title_checklists">Checklists</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_household">Household</string>
</resources>
