<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="pl.polsl.homeorganizer.notes.NoteFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_navigation_notes_to_navigation_checklists"
            app:destination="@id/navigation_checklists" />
    </fragment>

    <fragment
        android:id="@+id/navigation_checklists"
        android:name="pl.polsl.homeorganizer.checklists.ChecklistFragment"
        android:label="@string/title_checklists"
        tools:layout="@layout/fragment_checklist" >
        <action
            android:id="@+id/action_navigation_checklists_to_navigation_household"
            app:destination="@id/navigation_household" />
    </fragment>


    <fragment
        android:id="@+id/navigation_household"
        android:name="pl.polsl.homeorganizer.household.MyHouseholdFragment"
        android:label="@string/title_household"
        tools:layout="@layout/fragment_my_household" />
</navigation>